--- a/style.css
+++ b/style.css
@@ -228,3 +228,134 @@ a#change-amount {
 button.active {
 	background-color: #FE6C61;
 }
+
+.col-1,
+.col-2 {
+	margin-bottom: 3%;
+}
+.col-2 {
+	display: flex;
+	justify-content: space-between;
+}
+.col-2 .col {
+	width: 48%;
+}
+input[type="text"].parsley-error {
+	border-color: #FE6C61;
+}
+ul.parsley-errors-list {
+	list-style: none;
+	margin: 0;
+	color: #FE6C61;
+	padding: 0;
+}
+ul.parsley-errors-list li {
+	margin-bottom: -10px;
+}
+.gfield_required {
+	display: none;
+}
+#step-3 .gform_wrapper div.validation_error {
+	display: none;
+}
+#step-3 .gform_wrapper li.gfield.gfield_error {
+	background-color: transparent;
+	border: none;
+}
+#step-3 .gform_wrapper .field_description_below .gfield_description {
+	padding-top: 0;
+}
+#step-3 .gform_wrapper .gfield_error .gfield_label,
+#step-3 .gform_wrapper .validation_message,
+#step-3 .gform_wrapper li.gfield_error div.ginput_complex.ginput_container label {
+	color: #FE6C61;
+}
+#step-3 .gform_wrapper li.gfield_error input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
+	border-color: #FE6C61;
+}
+.entry-content p a.button {
+	color: #fff;
+}
+
+.col-1,
+.col-2 {
+	margin-bottom: 3%;
+}
+.col-2 {
+	display: flex;
+	justify-content: space-between;
+}
+.col-2 .col {
+	width: 48%;
+}
+input[type="text"].parsley-error {
+	border-color: #FE6C61;
+}
+ul.parsley-errors-list {
+	list-style: none;
+	margin: 0;
+	color: #FE6C61;
+	padding: 0;
+}
+.pay input[type="radio"],
+.pay input[type="checkbox"] {
+	margin-right: 5px;
+}
+ul.parsley-errors-list li {
+	margin-bottom: -10px;
+}
+#pay label {
+	display: inline;
+	margin-right: 5px;
+}
+.error {
+	border: 1px solid #FE6C61;
+	display: block;
+	margin-bottom: 3%;
+	padding: 1% 2%;
+	border-radius: 3px;
+	background-color: rgba(254,108,97,0.8);
+	color: #fff;
+	font-weight: 600;
+}
+.col-1,
+.col-2 {
+	margin-bottom: 3%;
+}
+.col-2 {
+	display: flex;
+	justify-content: space-between;
+}
+.col-2 .col {
+	width: 48%;
+}
+input[type="text"].parsley-error {
+	border-color: #FE6C61;
+}
+ul.parsley-errors-list {
+	list-style: none;
+	margin: 0;
+	color: #FE6C61;
+	padding: 0;
+}
+ul.parsley-errors-list li {
+	margin-bottom: -10px;
+}
+.update-user input[type="radio"],
+.update-user input[type="checkbox"] {
+	margin-right: 5px;
+}
+.update-user label {
+	display: inline;
+	margin-right: 5px;
+}
+.error {
+	border: 1px solid #FE6C61;
+	display: block;
+	margin-bottom: 3%;
+	padding: 1% 2%;
+	border-radius: 3px;
+	background-color: rgba(254,108,97,0.8);
+	color: #fff;
+	font-weight: 600;
+}
