--- a/style.css
+++ b/style.css
@@ -151,6 +151,11 @@ a#change-amount {
 .pretty.p-default:not(.p-fill) input:checked~.state.p-primary-o label {
 	font-weight: 600;
 }
+
+.pretty input:checked~.state.p-primary label:after {
+	background-color: #8fd1c1!important;
+}
+
 .top-up-modal .notice {
 	display: none;
 	position: relative;
@@ -366,4 +371,8 @@ ul.parsley-errors-list li {
 /* Transactions */
 tbody td {
 	font-size: 16px;
+}
+
+main form {
+	margin-bottom: 3%;
 }
