--- a/style.css
+++ b/style.css
@@ -408,3 +408,20 @@ td.amount {
 main form {
 	margin-bottom: 3%;
 }
+
+main form input[type="tel"] {
+	width: 100%;
+}
+
+@media (min-width: 1000px) {
+	form .two-columns {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+	form .two-columns label {
+		width: 48%;
+	}
+}
+
